<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WazzOn</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="setting">setting</string>
    <string name="logout">logout</string>
    <string name="info">About</string>
    <string name="noti">Notification</string>
    <string name="mute">Mute</string>
    <string name="signup">Signup</string>
    <string name="more">More</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="signupheading">Captain Please Fill up your Details Below:</string>
    <string name="phonemsg">We will call to verify your number</string>
    <string name="email">Email</string>
    <string name="signupbtn">Sign up</string>
    <string name="nosignupmsg">Nah! I will use Predefined Messages</string>
    <string name="inviteMsg">Hi..! This is Rohan Sharma lets watch Mumbai vs Pune match on June 21 on Pune together</string>
    <string name="sharewhatsapp">Invite Friends</string>
    <string name="signup_tv">Let\'s put a name to the message</string>
    <string name="app_code">chmy5</string>
    <string name="invitation_cta">Call to Action</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notuser_signup">Not a user signup</string>
    <string name="google_shortlink_api_key">AIzaSyDmWZqj6o169fGG9qKi3z4-w9lwQOlVSeA</string>
    <string name="apk_link">https://play.google.com/store/apps/details?id=com.get.wazzon</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string-array name="mycolor">
        <item>#24FA08</item>
        <item>#E51E17</item>
        <item>#FAD945</item>
        <item>#04DEFF</item>
        <item>#F41DA5</item>
        <item>#C75EF8</item>
        <item>#17D7E5</item>
    </string-array>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="share">Share</string>
    <string name="title_receive">Receive</string>
    <string name="title_send">Send</string>
    <string name="msg_no_deep_link">No deep link received.</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="facebook_app_id">404547739879304</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="com_facebook_login_text">Log in with facebook </string>
    <string name="logout_text">Already Logged-In. Logout?</string>
    <plurals name="joda_time_android_num_seconds_ago">
        <item msgid="4869870056547896011" quantity="one">"1 sekonde gelede"</item>
        <item msgid="3903706804349556379" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> sekondes gelede"</item>
    </plurals>
    <plurals name="joda_time_android_num_minutes_ago">
        <item msgid="3306787433088810191" quantity="one">"1 minuut gelede"</item>
        <item msgid="2176942008915455116" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> minute gelede"</item>
    </plurals>
    <plurals name="joda_time_android_num_hours_ago">
        <item msgid="9150797944610821849" quantity="one">"1 uur gelede"</item>
        <item msgid="2467273239587587569" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> uur gelede"</item>
    </plurals>
    <plurals name="joda_time_android_num_days_ago">
        <item msgid="861358534398115820" quantity="one">"gister"</item>
        <item msgid="2479586466153314633" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> dae gelede"</item>
    </plurals>
    <plurals name="joda_time_android_in_num_seconds">
        <item msgid="2729745560954905102" quantity="one">"oor 1 sekonde"</item>
        <item msgid="1241926116443974687" quantity="other">"oor <xliff:g id="COUNT">%d</xliff:g> sekondes"</item>
    </plurals>
    <plurals name="joda_time_android_in_num_minutes">
        <item msgid="8793095251325200395" quantity="one">"oor 1 minuut"</item>
        <item msgid="3330713936399448749" quantity="other">"oor <xliff:g id="COUNT">%d</xliff:g> minute"</item>
    </plurals>
    <plurals name="joda_time_android_in_num_hours">
        <item msgid="7164353342477769999" quantity="one">"oor 1 uur"</item>
        <item msgid="547290677353727389" quantity="other">"oor <xliff:g id="COUNT">%d</xliff:g> uur"</item>
    </plurals>
    <plurals name="joda_time_android_in_num_days">
        <item msgid="5413088743009839518" quantity="one">"môre"</item>
        <item msgid="5109449375100953247" quantity="other">"oor <xliff:g id="COUNT">%d</xliff:g> dae"</item>
    </plurals>
    <plurals name="joda_time_android_abbrev_num_seconds_ago">
        <item msgid="1849036840200069118" quantity="one">"1 sek. gelede"</item>
        <item msgid="3699169366650930415" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> sek. gelede"</item>
    </plurals>
    <plurals name="joda_time_android_abbrev_num_minutes_ago">
        <item msgid="6361490147113871545" quantity="one">"1 min. gelede"</item>
        <item msgid="851164968597150710" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> min. gelede"</item>
    </plurals>
    <plurals name="joda_time_android_abbrev_num_hours_ago">
        <item msgid="4796212039724722116" quantity="one">"1 uur gelede"</item>
        <item msgid="6889970745748538901" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> uur gelede"</item>
    </plurals>
    <plurals name="joda_time_android_abbrev_num_days_ago">
        <item msgid="8463161711492680309" quantity="one">"gister"</item>
        <item msgid="3453342639616481191" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> dae gelede"</item>
    </plurals>
    <plurals name="joda_time_android_abbrev_in_num_seconds">
        <item msgid="5842225370795066299" quantity="one">"oor 1 sek."</item>
        <item msgid="5495880108825805108" quantity="other">"oor <xliff:g id="COUNT">%d</xliff:g> sek."</item>
    </plurals>
    <plurals name="joda_time_android_abbrev_in_num_minutes">
        <item msgid="562786149928284878" quantity="one">"oor 1 min."</item>
        <item msgid="4216113292706568726" quantity="other">"oor <xliff:g id="COUNT">%d</xliff:g> minute"</item>
    </plurals>
    <plurals name="joda_time_android_abbrev_in_num_hours">
        <item msgid="3274708118124045246" quantity="one">"oor 1 uur"</item>
        <item msgid="3705373766798013406" quantity="other">"oor <xliff:g id="COUNT">%d</xliff:g> uur"</item>
    </plurals>
    <plurals name="joda_time_android_abbrev_in_num_days">
        <item msgid="2178576254385739855" quantity="one">"môre"</item>
        <item msgid="2973062968038355991" quantity="other">"oor <xliff:g id="COUNT">%d</xliff:g> dae"</item>
    </plurals>
    <string name="joda_time_android_preposition_for_date" msgid="9093949757757445117">"op <xliff:g id="DATE">%s</xliff:g>"</string>
    <string name="joda_time_android_preposition_for_time" msgid="5506831244263083793">"by <xliff:g id="TIME">%s</xliff:g>"</string>
    <plurals name="joda_time_android_duration_seconds">
        <item msgid="6962015528372969481" quantity="one">"1 sekonde"</item>
        <item msgid="1886107766577166786" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> sekondes"</item>
    </plurals>
    <plurals name="joda_time_android_duration_minutes">
        <item msgid="4915414002546085617" quantity="one">"1 minuut"</item>
        <item msgid="3165187169224908775" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> minute"</item>
    </plurals>
    <plurals name="joda_time_android_duration_hours">
        <item msgid="8917467491248809972" quantity="one">"1 uur"</item>
        <item msgid="3863962854246773930" quantity="other">"<xliff:g id="COUNT">%d</xliff:g> ure"</item>
    </plurals>
    <string name="joda_time_android_date_time">%2$s %1$s</string>
    <string name="joda_time_android_relative_time" msgid="1818557177829411417">"<xliff:g id="DATE">%1$s</xliff:g>, <xliff:g id="TIME">%2$s</xliff:g>"</string>
    <string name="share_msg">Hey Watch the event with me and others watching at the same time on WazzOn. DeepLink</string>
    <string name="com_facebook_loginview_log_out_button">Log in with Facebook\t\t\t</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook\t\t\t</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook\t\t\t</string>
    <string name="positive_btn">Update</string>
    <string name="negative_btn">Exit</string>
    <string name="playon">Play On</string>
    <string name="about_text">Feel like you are in the Stadium as you Chat with All watching your Favorite Matches and Shows at the same time on WazzOn.
    Whats more you can invite your Friends and watch your Favorite Matches and Shows together and feel like you are in an House Party.
    Switch modes between Stadium(all watching) and HouseParty(just your friends).With WazzOn never watch Alone!\n\nFor any feedback drop us a line here: </string>
    <string name="user_disabled">Please contact us using the about screen.</string>
</resources>